--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,18 @@
-<html>
-    <head></head>
-    <body>
-    home!!
-    </body>
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>home</title>
+</head>
+<body>
+<div class="container">
+    <div>
+        <h1>Home</h1>
+        <p>
+            <a href="/members/new">Sign up</a>
+            <a href="/members">Members</a>
+        </p>
+    </div>
+</div>
+</body>
 </html>
